# synapsekit

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  asv.conf.json  pyproject.toml
.github/workflows/: benchmarks.yml  discord-stats.yml
assets/grafana/: synapsekit-observe-dashboard.json
benchmarks/: conftest.py  pytest.ini  report.py  test_smoke_benchmark.py
benchmarks/asv/: bench_smoke.py  machine.json
docs/: evalhub.md  observability.md
examples/: README.md  agent_federation_cooperation.py  continuous_finetuning.py  kg_multi_hop_rag.py  observability.py  reasoning_models.py  structured_output.py  voice_assistant.py  voice_pipeline.py
src/synapsekit/: __init__.py  _compat.py  _json.py  _loop.py  structured_output.py
src/synapsekit/_rust/: Cargo.toml
src/synapsekit/_rust/src/: chunker.rs  hash.rs  json_fast.rs  lib.rs
tests/: test_issue_598_self_healing.py  test_json_compat.py  test_loop.py  test_perf_optimizations.py  test_perf_regression.py  test_rust_chunker.py  test_structured_output.py  test_tracer_quality.py  test_v053_features.py  test_v060_features.py  test_v065_features.py  test_v066_features.py  test_v068_features.py  test_v069_features.py  test_v070_features.py  test_v120_features.py  test_v170_production.py
tests/agents/: test_agent_federation.py  test_agent_registry.py  test_reasoning_agent.py  test_tools_behavioral.py
tests/cli/: test_bench.py  test_ui.py
tests/evaluation/: test_optimizer.py  test_rag_evaluator.py
tests/llm/: test_anthropic.py  test_cache_retry.py  test_cloudflare.py  (+9 more)
(+168 files in other folders)
