[package]
name = "synapsekit-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
# Rust-only unit tests (no pyo3 needed)
